syntax = "proto3";

package venue;

service CompanyService {
  rpc GetVenueDetails(VenueRequest) returns (VenueResponse);
}

message VenueRequest {
  string venueId = 1;
}

message VenueResponse {
  string venueName = 1;
  int32 venueAmount = 2;
  string venueCity = 3;
  string venueState = 4;
  string venueImage = 5;
  string companyId = 6;
}
