syntax = "proto3";

package user;

service UserService {
  rpc GetUserDetails (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string userId = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}
